using System;

namespace PlayerStates {
    static class AnimPlayerParameters{

        public static string IDLE = "IDLE";
        public static string RUNNING = "RUNNING";
        public static string STOPPING = "STOPPING";
        public static string PRE_JUMP_IDLE = "PRE_JUMP_IDLE";
        public static string PRE_JUMP_RUNNING = "PRE_JUMP_RUNNING";
        public static string JUMP_START_IDLE = "JUMP_START_IDLE";
        public static string JUMP_START_RUNNING = "JUMP_START_RUNNING";
        public static string JUMP_AIR = "JUMP_AIR";        
        public static string FALLING = "FALLING";
        public static string LAND_IDLE = "LAND_IDLE";
        public static string LAND_RUNNING = "LAND_RUNNING";
        public static string LAND_ROLLING = "LAND_ROLLING";
        public static string DUCKING = "DUCKING";




    }
}