using System;

namespace PlayerStates {
    static class AnimPlayerParameters{

        public static string IDLE = "IDLE";
        public static string RUNNING = "RUNNING";
        public static string STOPPING = "STOPPING";
        public static string PRE_JUMP_IDLE = "PRE_JUMP_IDLE";
        public static string PRE_JUMP_RUNNING = "PRE_JUMP_RUNNING";
        public static string JUMP_START_IDLE = "JUMP_START_IDLE";
        public static string JUMP_START_RUNNING = "JUMP_START_RUNNING";
        public static string JUMP_AIR = "JUMP_AIR";        
        public static string FALLING_IDLE = "FALLING_IDLE";
        public static string FALLING_RUNNING = "FALLING_RUNNING";
        public static string LANDING_IDLE = "LANDING_IDLE";
        public static string LANDING_RUNNING = "LANDING_RUNNING";

        


    }
}