using System;

namespace PlayerStates {
    static class AnimPlayerParamters{

        public static string IDLE = "IDLE";
        public static string PRE_JUMP_IDLE = "PRE_JUMP_IDLE";
        public static string JUMP_START_IDLE = "JUMP_START_IDLE";
        public static string JUMP_AIR = "JUMP_AIR";
        public static string PRE_JUMP_RUNNING = "PRE_JUMP_RUNNING";
        public static string FALLING = "FALLING";
        public static string LANDING_IDLE_TRIGGER = "LANDING_IDLE_TRIGGER";
        public static string RUNNING = "RUNNING";
        public static string STOPPING_TRIGGER = "STOPPING_TRIGGER";
        public static string JUMP_START_RUNNING = "JUMP_START_RUNNING";


    }
}